artifacts/06-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  namespace: wso2-iam-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: controller
    spec:
      containers:
        - name: controller
          image: sureshmichael/wso2-iam-operator:v0.0.1
      serviceAccountName: controller
